# PicoW-Bootloader

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_and_combine.sh  combine_bootloader_and_app.py  compile_commands.json  flash_bootloader.sh  flash_combined.sh  flash_example_app.sh  pad_bootloader.py  unittests.cmake
.github/workflows/: build.yml  cmake-single-platform.yml  pre-commit.yml  unittest.yml
bootloader/: CMakeLists.txt  build.sh  memmap_custom.ld
bootloader/src/: bootloader.c  bootloader.cpp  bootloader.h  main.cpp
bootloader/test/: CMakeLists.txt  bootloader_test.cpp
bootloader/test/mocks/: mock_bootloader_lib.h
bootloader/test/stubs/: RP2040.h  bootloader_lib.h  linker_definitions.huanstoeh
bootloader/test/stubs/hardware/: flash.h
bootloader/test/stubs/pico/: flash.h
bootloader_lib/: CMakeLists.txt
bootloader_lib/include/: bootloader_lib.h  software_download.h
bootloader_lib/src/: bootloader_lib.cpp  bootloader_lib.h  software_download.cpp
example_app/: CMakeLists.txt  build.sh  memmap_custom.ld
example_app/src/: bootloader.s  hello_world.c  hello_world.cpp  picow_blink.c  picow_blink_fast.c  picow_blink_fast.cpp
include_common/: common_definitions.h  linker_definitions.h  mbedtls_config.h
linker_common/: app.ld  bootloader.ld  linker_definitions.h  linker_definitions.ld
software_download/: CMakeLists.txt
software_download/include/: pico_interface.h  pico_interface_impl.h  software_download.h  software_download_api.h  types.h
software_download/src/: bootloader.cpp  bootloader.h  software_download.cpp
software_download/src/hal/: pico_interface.h  pico_interface_impl.cpp  pico_interface_impl.h
software_download/test/: CMakeLists.txt  bootloader_test.cpp  software_download_test.cpp
software_download/test/mocks/: mock_bootloader_lib.h  mock_pico_interface.h
software_download/test/stubs/: linker_definitions.h  linker_definitions_stub.cpp
software_download/test/stubs/hardware/: flash.h  sync.h  watchdog.h
software_download/test/stubs/hardware/regs/: addressmap.h
software_download/test/stubs/mbedtls/: sha256.h
src/: main.cpp
toolchains/: gcc.cmake
